--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -26,3 +26,10 @@ msgstr "Welcome to Holberton"
 msgid "Hello world!"
 msgstr "Hello world!"
 
+msgid "logged_in_as"
+msgstr "You are logged in as %(username)s"
+
+msgid "not_logged_in"
+msgstr "You are not logged in."
+
+
