--- a/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/fr/LC_MESSAGES/messages.po
@@ -40,5 +40,5 @@ msgstr "Vous n'êtes pas connecté."
 
 #: 7-app.py:60 templates/7-index.html:11
 msgid "current_time_is"
-msgstr "Current time is %(time)s"
+msgstr "Nous sommes le %(current_time)s"
 
